@@ -139,12 +139,21 @@ no_spawn_on_player: 0
 // map regardless of what the mob-spawn file says.
 force_random_spawn: no
 
-// Do summon slaves inherit the passive/aggressive traits of their master? (Note 1)
-slaves_inherit_mode: yes
+// Do summon slaves inherit the passive/aggressive traits of their master?
+// 0: No, retain original mode.
+// 1: Slaves are always aggressive.
+// 2: Slaves are always passive.
+// 3: Same as master's aggressive/passive state.
+slaves_inherit_mode: 2
 
-// Do summon slaves have the same walking speed as their master? (Note 1)
-// NOTE: The default is yes for official servers.
-slaves_inherit_speed: yes
+// Do summon slaves have the same walking speed as their master?
+// NOTE: The default is 3 for official servers.
+// 0: Never.
+// 1: If the master can walk
+// 2: If the master can't walk (even motionless mobs have a speed
+//    entry in their mob_db)
+// 3: Always
+slaves_inherit_speed: 3
 
 // Will summoned monsters (alchemists, or @summon'ed monsters) attack cause a
 // chance of triggering the master's autospell cards? (Note 1)
